--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:id="@+id/tv_empty_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:text="No Result found"
-        android:layout_centerInParent="true"/>
+        android:visibility="gone"/>
 
 </RelativeLayout>
